--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,8 +14,11 @@
         android:title="@string/prefs_category_general"
         android:key="general">
         <ListPreference
-            android:title="@string/prefs_storage_path"
+            android:title="@string/prefs_data_storage_location"
             android:key="storage_path"/>
+        <Preference
+            android:title="@string/prefs_data_storage_location"
+            android:key="data_storage_location" />
         <ListPreference
             android:title="@string/prefs_theme_title"
             android:key="darkMode"
