--- a/app/src/main/res/layout/toolbar_standard.xml
+++ b/app/src/main/res/layout/toolbar_standard.xml
@@ -206,6 +206,7 @@
                     style="@style/Widget.AppTheme.Button.IconButton"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
+                    android:contentDescription="@string/notification_icon_description"
                     app:cornerRadius="@dimen/button_corner_radius"
                     app:iconSize="20dp"
                     app:icon="@drawable/ic_notification"
