--- a/app/src/main/res/layout/internal_two_way_sync_view_holder.xml
+++ b/app/src/main/res/layout/internal_two_way_sync_view_holder.xml
@@ -28,16 +28,33 @@
         android:gravity="center_vertical"
         android:orientation="vertical">
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            tools:ignore="UseCompoundDrawables">
+
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="middle"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:textColor="@color/text_color"
             android:textSize="@dimen/two_line_primary_text_size"
             tools:text="Folder abc" />
+
+        <ImageView
+            android:id="@+id/unset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/unset_internal_two_way_sync_description"
+            android:src="@drawable/ic_close" />
+            
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
